# DeepProgC-CPP

./: .gitignore  .travis.yml  CMakeLists.txt  README.RST  README.md  README.rst  Readme.md  script
For_dynamic_library/: cmp_arrays.c  create_threads.c  fill_arrays.c  main.c  multi_thread_funcs.c
For_dynamic_library/multi_thread_app/: CMakeLists.txt
For_static_library/: compare_arrays.c  compare_lists.c  create_array.c  create_list.c  free_list.c  main.c  print_list.c  reverse_list.c
For_static_library/single_thread_app/: CMakeLists.txt
Project/include/: buildings.h  test.h
Project/srcs/: console_app.c  get_build_info.c  location.c  main.c  print_struct.c  purpose.c  utils.c
Project/tests/: test_app.c  unit_test.c
app_for_test/: CMakeLists.txt
console_app/: CMakeLists.txt
includes/: arrays.h  lists.h
multi_thread_app/: CMakeLists.txt
single_thread_app/: CMakeLists.txt
tests/: Test.cpp
utils/: create_and_fill_array.c  create_array.c  create_data_struct.c  create_range_for_thrds.c  create_threads.c  free_func.c  print_array.c  request_user_data.c
